<resources>
    <string name="app_name">Extractor2</string>
    <string name="go_to_firestore_database_v1_only_clickable">Go to firestore-database v1 only clickable!</string>
    <string name="go_to_firestore_database_v2_only_clickable">Go to firestore-database v2!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show">Show</string>
    <string name="go_to_firestore_search_collection_queries"><![CDATA[Go to firestore & search collection queries]]></string>
    <string name="multiplication_table">Multiplication Table</string>
    <string name="todo">TODO</string>
    <string name="submit">submit</string>
    <string name="scroll_game">scroll Game</string>

</resources>
