<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvFirebase2"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:clickable="true"
        android:focusable="auto"
        android:focusableInTouchMode="true"
        android:longClickable="true"
        android:onClick="goToOtherActivity"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/go_to_firestore_database_v1_only_clickable"
                android:paddingStart="2dp"
                android:paddingLeft="2dp"
                android:paddingTop="23dp"
                android:paddingEnd="4dp"
                android:paddingRight="4dp"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="35dp"
                android:hint="@string/go_to_firestore_database_v1_only_clickable"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:textColorHint="@android:color/white"
                android:textIsSelectable="false"
                android:textSize="14sp"
                android:textStyle="bold|italic"
                app:fontFamily="casual" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvFirebase1"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:clickable="true"
        android:focusable="auto"
        android:focusableInTouchMode="true"
        android:longClickable="true"
        android:onClick="goToOtherActivity1"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/go_to_firestore_database_v2_only_clickable"
                android:paddingStart="2dp"
                android:paddingLeft="2dp"
                android:paddingTop="23dp"
                android:paddingEnd="4dp"
                android:paddingRight="4dp"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="35dp"
                android:hint="@string/go_to_firestore_database_v2_only_clickable"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:textColorHint="@android:color/white"
                android:textIsSelectable="false"
                android:textSize="14sp"
                android:textStyle="bold|italic"
                app:fontFamily="casual" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvMultiplicationTable"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:onClick="goToOtherActivity2"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="83dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/m" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="134dp"
                android:layout_height="57dp"
                android:layout_gravity="center"
                android:layout_margin="25dp"
                android:layout_marginStart="110dp"
                android:layout_marginLeft="110dp"
                android:layout_marginBottom="24dp"
                android:gravity="center_horizontal"
                android:hint="@string/go_to_firestore_database_v2_only_clickable"
                android:paddingLeft="21dp"
                android:text="@string/multiplication_table"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textIsSelectable="false"
                android:textSize="17sp"
                android:textStyle="bold|italic"
                app:fontFamily="casual"
                android:paddingStart="21dp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvFirebase3"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:clipChildren="false"
        android:onClick="goToOtherActivity3"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="35dp"
                android:layout_weight="1"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/go_to_firestore_search_collection_queries"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="165dp"
        android:layout_height="54dp"
        android:layout_gravity="end|bottom"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        app:backgroundTint="@color/colorPrimary"
        app:srcCompat="@drawable/ic_search_black_24dp"
         />



</LinearLayout>